# AI-Side-Projects

./: .gitignore  README.md  app.py  prompts.yaml  pyproject.toml  requirements.txt  utils.py
AI_RAR/: agents.py  app.py  data_models.py  graph.py  rar_app.py  utils.py
DOHCPG_RAG/: LICENSE  pyproject.toml  requirements.txt  structured_context.txt  sys_prompts.yaml  testing.ipynb
DOHCPG_RAG/cpg_agent/: agent_chains.py  data_loader.py  data_models.py  graph_endpoint.py  graph_flow.py  helper_utils.py  sys_prompts.yaml  ui_app.py
DOHCPG_RAG/knowledge_base/: [MD] [CPG] Diagnosis and Management of Chronic Heart Failure with Reduced Ejection Fraction (HFrEF) for Primary Care Physicians.md  [MD] [CPG] Management of Acute Ischemic Stroke and Intracerebral Hemorrhage 2024.txt  [MD] [CPG] Periodic Health Examination_ Lifestyle Advice.md  [MD] [CPG] Periodic Health Examination_ Screening for Cardiovascular Disease.md  [MD] [CPG] Periodic Health Examination_ Screening for Vision Disorders.md  [MD] [CPG] Philippine Retinoblastoma Clinical Practice Guidelines.md  [MD] [CPG] Screening and Diagnosis of Obesity in Adults.md
